--- a/C++/CodeForces/inputf.in
+++ b/C++/CodeForces/inputf.in
@@ -1,5 +1,41 @@
 4
-aeiou
-abxy
-aebcdefghij
-abcdeeafg
+
+
+....B...
+....B...
+....B...
+RRRRRRRR
+....B...
+....B...
+....B...
+....B...
+
+
+RRRRRRRB
+B......B
+B......B
+B......B
+B......B
+B......B
+B......B
+RRRRRRRB
+
+
+RRRRRRBB
+.B.B..BB
+RRRRRRBB
+.B.B..BB
+.B.B..BB
+RRRRRRBB
+.B.B..BB
+.B.B..BB
+
+
+........
+........
+........
+RRRRRRRR
+........
+........
+........
+........
